# TheChosenOne

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  test.ipynb
TheChosenOne/: DataAssembler.py  FiscaPy.py  __init__.py
